--- a/last2weeks/lambdaCSS.css
+++ b/last2weeks/lambdaCSS.css
@@ -123,61 +123,11 @@ hr{
     padding-left:15px;
     color:black;
     background: white;
-/*     background-image: -moz-linear-gradient(45deg, #f30 25%, transparent 25%), 
-        -moz-linear-gradient(-45deg, #f30 25%, transparent 25%), 
-        -moz-linear-gradient(45deg, transparent 75%, #f30 75%), 
-        -moz-linear-gradient(-45deg, transparent 75%, #f30 75%);
-    background-image: -webkit-gradient(linear, 0 100%, 100% 0, color-stop(.25, #f30), color-stop(.25, transparent)), 
-        -webkit-gradient(linear, 0 0, 100% 100%, color-stop(.25, #f30), color-stop(.25, transparent)), 
-        -webkit-gradient(linear, 0 100%, 100% 0, color-stop(.75, transparent), color-stop(.75, #f30)), 
-        -webkit-gradient(linear, 0 0, 100% 100%, color-stop(.75, transparent), color-stop(.75, #f30));
-    background-image: -webkit-linear-gradient(45deg, #f30 25%, transparent 25%), 
-        -webkit-linear-gradient(-45deg, #f30 25%, transparent 25%), 
-        -webkit-linear-gradient(45deg, transparent 75%, #f30 75%), 
-        -webkit-linear-gradient(-45deg, transparent 75%, #f30 75%);
-    background-image: -o-linear-gradient(45deg, #f30 25%, transparent 25%), 
-        -o-linear-gradient(-45deg, #f30 25%, transparent 25%), 
-        -o-linear-gradient(45deg, transparent 75%, #f30 75%), 
-        -o-linear-gradient(-45deg, transparent 75%, #f30 75%);
-    background-image: linear-gradient(45deg, #f30 25%, transparent 25%), 
-        linear-gradient(-45deg, #f30 25%, transparent 25%), 
-        linear-gradient(45deg, transparent 75%, #f30 75%), 
-        linear-gradient(-45deg, transparent 75%, #f30 75%);
-    -moz-background-size: 2px 2px;
-    background-size: 2px 2px;
-    -webkit-background-size: 2px 2.1px; override value for webkit
-    background-position: 0 0, 1px 0, 1px -1px, 0px 1px;
-    border: 1px solid #f30; */
     padding-bottom: 2%;
-  /*   -webkit-box-shadow: 0px 10px 59px 38px rgba(255, 51, 0, 0.31);
-    -moz-box-shadow: 0px 10px 59px 38px rgba(255, 51, 0, 0.31);
-    box-shadow: 0px 10px 59px 38px rgba(255, 51, 0, 0.31); */
-/*    background-image: -moz-linear-gradient(45deg, #f30 25%, transparent 25%), 
-        -moz-linear-gradient(-45deg, #f30 25%, transparent 25%), 
-        -moz-linear-gradient(45deg, transparent 75%, #f30 75%), 
-        -moz-linear-gradient(-45deg, transparent 75%, #f30 75%);
-    background-image: -webkit-gradient(linear, 0 100%, 100% 0, color-stop(.25, #f30), color-stop(.25, transparent)), 
-        -webkit-gradient(linear, 0 0, 100% 100%, color-stop(.25, #f30), color-stop(.25, transparent)), 
-        -webkit-gradient(linear, 0 100%, 100% 0, color-stop(.75, transparent), color-stop(.75, #f30)), 
-        -webkit-gradient(linear, 0 0, 100% 100%, color-stop(.75, transparent), color-stop(.75, #f30));
-    background-image: -webkit-linear-gradient(45deg, #f30 25%, transparent 25%), 
-        -webkit-linear-gradient(-45deg, #f30 25%, transparent 25%), 
-        -webkit-linear-gradient(45deg, transparent 75%, #f30 75%), 
-        -webkit-linear-gradient(-45deg, transparent 75%, #f30 75%);
-    background-image: -o-linear-gradient(45deg, #f30 25%, transparent 25%), 
-        -o-linear-gradient(-45deg, #f30 25%, transparent 25%), 
-        -o-linear-gradient(45deg, transparent 75%, #f30 75%), 
-        -o-linear-gradient(-45deg, transparent 75%, #f30 75%);
-    background-image: linear-gradient(45deg, #f30 25%, transparent 25%), 
-        linear-gradient(-45deg, #f30 25%, transparent 25%), 
-        linear-gradient(45deg, transparent 75%, #f30 75%), 
-        linear-gradient(-45deg, transparent 75%, #f30 75%);
-    -moz-background-size: 2px 2px;
-    background-size: 2px 2px;
-    -webkit-background-size: 2px 2.1px;
-    background-position: 0 0, 1px 0, 1px -1px, 0px 1px; */
-    
-    background:#f4f4f4;
+    background-color: #F1F1F1;
+    -webkit-box-shadow: 0px 4px 65px 28px rgba(255,255,255,1);
+    -moz-box-shadow: 0px 4px 65px 28px rgba(255,255,255,1);
+    box-shadow: 0px 4px 65px 28px rgba(255,255,255,1);
     color: black;
 }
 
@@ -396,8 +346,6 @@ hr{
 
 #info-box .summary{
     font-size: 20px;
-    background-color:white;
-    border:1px solid #f30;
 }
 
 /***************************************
@@ -488,6 +436,8 @@ p + p{
 
 @media (max-width: 480px){
     .section p{
+        text-indent: 0;
+        margin-bottom: 2em;
         font-size: 1.9em;
         line-height: 1.55em;
         text-rendering: optimizeLegibility;
@@ -848,6 +798,12 @@ a {
 }
 
 @media (max-width: 768px){
+
+    .menu-publication-title{
+        font-size: 17px;
+        line-height: 20px;
+    }
+    
     .toc_number{
         text-align: left;
         font-size: 17px;
@@ -877,10 +833,13 @@ a {
         -moz-box-shadow: 10px 0px 16px 1px rgba(255,255,255,1);
         box-shadow: 10px 0px 16px 1px rgba(255,255,255,1);
         margin-right: 0px;
+        padding-bottom: 100px;
     }
     
     #toc_wrapper{
         margin-right: 0px !important;
+        padding-bottom: 100px;
+
     }
     .toggle_menu{
         color:transparent;
@@ -1036,7 +995,7 @@ a.page-scroll:hover, a.page-scroll:active, a.page-scroll:link, a.page-scroll:vis
     height: 100%;
     left: -24%;
     position: absolute;
-    background-color: white;
+    background-color: #F1F1F1;
     width: 24%;
     /* -webkit-box-shadow: -16px 0px 39px 1px rgba(255,51,0,0.51); */
     /* -moz-box-shadow: -16px 0px 39px 1px rgba(255,51,0,0.51); */
@@ -1113,16 +1072,11 @@ Table of content is contained in pushmenu, it shows the different parts of the b
 ********OPENS UP THE MENU********/
 #menu_bar {
     display: none;
-    /* 
-    z-index: 999999999999999999;
-     */
-    /*     background-color: white;
-     */	
     height: 100%;
     position: fixed;
     color: black;
     width: 4%;
-    background: white;
+    background: #f1f1f1;
 }
 
 
@@ -1413,6 +1367,13 @@ z-index:99;
 	}
 
 
+.form-control:focus{
+    border-color: none;
+    outline: 0;
+    -webkit-box-shadow: none;
+    box-shadow: none;
+    border:none;
+}
 
 
 
@@ -1627,12 +1588,11 @@ input:hover {
 }
 
 .ui-menu-item:hover{
-	background-color: #FFA;
-	color: #000;
+	background-color: #d8d8d8;
 }
 
 .ui-menu-item:focus {
-    background-color: yellow;
+    background-color: #f30;
 }
 
 
@@ -2118,7 +2078,7 @@ ol {
     padding: 0px;
     height: 100%;
     border: none;
-    background-color: white;
+    background-color: #F1F1F1;
     /* border-left: 1px solid #d8d8d8; */
     font-family: "HKGrotesk";
 }
@@ -2231,6 +2191,19 @@ ol {
     color: black;
     background-color:#f4f4f4; !important;
 }
+
+.btn-group-horizontal{
+    width: 100%;
+    max-width: 100%;
+}
+
+.btn-group-horizontal .btn-primary{
+    margin: 0px;
+    padding: 0px;
+}
+
+
+
 
 .btn-primary:focus{
     color: black;
@@ -2390,7 +2363,7 @@ blockquote p{
     display: inline-block;
     overflow: hidden;
     text-overflow:clip;
-    height: 25px;
+    height: 50px;
     box-shadow: 0 3px 5px rgba(0,0,0,.135);
 }
 
